--- a/about.html
+++ b/about.html
@@ -914,7 +914,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="#">BASTUN.</a> All Right Reserved</p>
+                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
@@ -952,7 +952,4 @@
 
 
 </body>
-
-
-<!-- Mirrored from html.themewin.com/bastun-preview/bastun/about.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Oct 2024 19:48:43 GMT -->
 </html>
