--- a/faq.html
+++ b/faq.html
@@ -933,7 +933,7 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2024 <a href="#">BASTUN.</a> All Right Reserved</p>
+                      <p>Copyright © 2024 <a href="index.html">Digitalminds on.</a> All Right Reserved</p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
