--- a/project.html
+++ b/project.html
@@ -8,16 +8,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="img/logo/icon.svg">
+     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/icofont.min.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 
@@ -39,7 +39,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy" src="img/pre.png" alt="Preload">
+            <img loading="lazy" src="assets/img/logo/icon.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
@@ -131,7 +131,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html"><img src="img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                                    <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
                                 </div>
                             </div>
                             <div class="headerarea__component">
@@ -215,7 +215,7 @@
                     </div>
                     <div class="mobile__log">
                         <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                                <img class="mobile__log--img" src="img/logo/full-logo.svg" alt="logo-img">
+                                <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
                             </a></div>
                     </div>
 
@@ -234,7 +234,7 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -425,7 +425,7 @@
 
         <!-- breadcrumbarea__start -->
         <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
-            style="background: url(img/about/about__bg__1.jpg);">
+            style="background: url(assets/img/about/about__bg__1.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -457,7 +457,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__2.png" alt="">
+                                <img src="assets/img/project/project__2.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -483,7 +483,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__3.png" alt="">
+                                <img src="assets/img/project/project__3.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -510,7 +510,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__4.png" alt="">
+                                <img src="assets/img/project/project__4.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -536,7 +536,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__2.png" alt="">
+                                <img src="assets/img/project/project__2.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -562,7 +562,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2300">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__3.png" alt="">
+                                <img src="assets/img/project/project__3.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -589,7 +589,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__4.png" alt="">
+                                <img src="assets/img/project/project__4.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -615,7 +615,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__2.png" alt="">
+                                <img src="assets/img/project/project__2.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -641,7 +641,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="img/project/project__3.png" alt="">
+                                <img src="assets/img/project/project__3.png" alt="">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -703,7 +703,7 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="img/testimonial/testimonial__4.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="#">Mattie Warner</a></h6>
@@ -722,7 +722,7 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="img/testimonial/testimonial__5.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="#">Kristin Gilbert</a></h6>
@@ -741,7 +741,7 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="img/testimonial/testimonial__6.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="#">Arlene Miles</a></h6>
@@ -760,7 +760,7 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="img/testimonial/testimonial__4.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="#">Mattie Warner</a></h6>
@@ -779,7 +779,7 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="img/testimonial/testimonial__5.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="#">Mattie Warner</a></h6>
@@ -840,14 +840,14 @@
         <!--whattappicon-->
         <!-- footer start -->
         <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-            style="background-image: url(img/footer/footer_1.png);">
+            style="background-image: url(assets/img/footer/footer_1.png);">
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
                     <a href="index.html">
 
-                        <img class="bbb__animate" src="img/footer/brand__badge.png" alt="Footer badge">
-                        <img class="bbb__icon" src="img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                        <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                        <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
                     </a>
                 </div>
             </div>
@@ -858,7 +858,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <img src="img/logo/full-logo.svg" alt="">
+                                    <img src="assets/img/logo/full-logo.svg" alt="">
                                 </div>
                                 <div class="footer__text">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -989,12 +989,12 @@
 
 
     <!-- JS here -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
@@ -1008,8 +1008,5 @@
 
 
 </body>
-
-
-<!-- Mirrored from html.themewin.com/bastun-preview/bastun/project.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Oct 2024 19:48:50 GMT -->
 
 </html>
