--- a/service-details.html
+++ b/service-details.html
@@ -1,7 +1,5 @@
 <!doctype html>
 <html class="no-js" lang="zxx">
-
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -9,16 +7,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-     <link rel="shortcut icon" type="image/x-icon" href="img/logo/icon.svg">
+     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/icofont.min.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 
@@ -40,7 +38,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy" src="img/pre.png" alt="Preload">
+            <img loading="lazy" src="assets/img/logo/icon.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
@@ -133,7 +131,7 @@
                 <div class="headerarea__component__wrap">
                     <div class="headerarea__component">
                         <div class="headerarea__logo">
-                            <a href="index.html"><img src="img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                            <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
                         </div>
                     </div>
                     <div class="headerarea__component">
@@ -216,7 +214,7 @@
             </div>
             <div class="mobile__log">
                 <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                        <img class="mobile__log--img" src="img/logo/full-logo.svg" alt="logo-img">
+                        <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
                     </a></div>
             </div>
 
@@ -235,7 +233,7 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -427,7 +425,7 @@
 
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea" style="background: url(img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea" style="background: url(assets/img/about/about__bg__1.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -535,9 +533,9 @@
                                 </div>
                                 <div class="sidebar__button">
                                     <a class="default__button sidebar__button__1" target="_blank"
-                                        href="img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
+                                        href="assets/img/download.pdf">Download PDF<i class="icofont-file-pdf"></i></a>
                                     <a class="default__button btn__black" target="_blank"
-                                        href="img/download.docx">Download DOC<i class="icofont-file-document"></i></a>
+                                        href="assets/img/download.docx">Download DOC<i class="icofont-file-document"></i></a>
                                 </div>
 
                             </div>
@@ -549,7 +547,7 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
                             <div class="service__details__img" data-aos="fade-up" data-aos-duration="1500">
-                                <img src="img/service/service__details__1.png" alt="">
+                                <img src="assets/img/service/service__details__1.png" alt="">
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h4>Management Consulting</h4>
@@ -577,7 +575,7 @@
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="service__details__planning__img">
-                                            <img src="img/service/service__details__2.png" alt="">
+                                            <img src="assets/img/service/service__details__2.png" alt="">
                                         </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -657,25 +655,25 @@
 
                     <div class="brand__inner brand__inner--2">
                         <div class="brand__single">
-                            <img src="img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="img/brand/brand__2.png" alt="">
+                            <img src="assets/img/brand/brand__2.png" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="img/brand/brand__2.png" alt="">
+                            <img src="assets/img/brand/brand__2.png" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="img/brand/brand__2.png" alt="">
+                            <img src="assets/img/brand/brand__2.png" alt="">
                         </div>
                         <div class="brand__single">
-                            <img src="img/brand/brand__1.png" alt="">
+                            <img src="assets/img/brand/brand__1.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -684,14 +682,14 @@
 
             <!-- footer start -->
             <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-                style="background-image: url(img/footer/footer_1.png);">
+                style="background-image: url(assets/img/footer/footer_1.png);">
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
                         <a href="index.html">
 
-                            <img class="bbb__animate" src="img/footer/brand__badge.png" alt="Footer badge">
-                            <img class="bbb__icon" src="img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                            <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                            <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
                         </a>
                     </div>
                 </div>
@@ -702,7 +700,7 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <img src="img/logo/full-logo.svg" alt="">
+                                        <img src="assets/img/logo/full-logo.svg" alt="">
                                     </div>
                                     <div class="footer__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -840,12 +838,12 @@
 
 
     <!-- JS here -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
