--- a/service.html
+++ b/service.html
@@ -10,16 +10,16 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/icon.svg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/icofont.min.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
+    <link rel="stylesheet" href="assets/css/icofont.min.css">
+    <link rel="stylesheet" href="assets/css/glightbox.min.css">
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
 
@@ -41,7 +41,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy"  src="img/logo/icon.svg" alt="Preload">
+            <img loading="lazy"  src="assets/img/logo/icon.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
@@ -125,7 +125,7 @@
                 <div class="headerarea__component__wrap">
                     <div class="headerarea__component">
                         <div class="headerarea__logo">
-                            <a href="index.html"><img src="img/logo/full-logo.svg" alt="Bastun Logo"></a>
+                            <a href="index.html"><img src="assets/img/logo/full-logo.svg" alt="Bastun Logo"></a>
                         </div>
                     </div>
                     <div class="headerarea__component">
@@ -208,7 +208,7 @@
             </div>
             <div class="mobile__log">
                 <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
-                        <img class="mobile__log--img" src="img/logo/full-logo.svg" alt="logo-img">
+                        <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
                     </a></div>
             </div>
 
@@ -225,7 +225,7 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="index.html">
-                        <img src="img/logo/Logo_2.png" alt="Logo-img">
+                        <img src="assets/img/logo/Logo_2.png" alt="Logo-img">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
@@ -334,7 +334,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up" style="background: url(img/about/about__bg__1.jpg);">
+        <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up" style="background: url(assets/img/about/about__bg__1.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
@@ -372,7 +372,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/HAMID.png" alt="">
+                                    <img src="assets/img/service/HAMID.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_422)"/>
@@ -410,7 +410,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/AHMAD.png" alt="">
+                                    <img src="assets/img/service/AHMAD.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_420)"/>
@@ -448,7 +448,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/TAHIR.png" alt="">
+                                    <img src="assets/img/service/TAHIR.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_421)"/>
@@ -486,7 +486,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/daniyal.png" alt="">
+                                    <img src="assets/img/service/daniyal.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_422)"/>
@@ -524,7 +524,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/Untitled design (26).png" alt="">
+                                    <img src="assets/img/service/Untitled design (26).png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_420)"/>
@@ -562,7 +562,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/Untitled design (25).png" alt="">
+                                    <img src="assets/img/service/Untitled design (25).png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_421)"/>
@@ -599,7 +599,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/SAIF.png" alt="">
+                                    <img src="assets/img/service/SAIF.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_421)"/>
@@ -636,7 +636,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/SAIM.png" alt="">
+                                    <img src="assets/img/service/SAIM.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_421)"/>
@@ -673,7 +673,7 @@
                         <div class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="img/service/awais.png" alt="">
+                                    <img src="assets/img/service/awais.png" alt="">
                                     <div class="service__bg__img">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="165" height="150" viewBox="0 0 165 150" fill="none">
                                             <path d="M165 65C165 106.421 116.421 150 75 150C33.5786 150 0 116.421 0 75C0 33.5786 33.5786 0 75 0C116.421 0 165 23.5786 165 65Z" fill="url(#paint0_linear_1212_421)"/>
@@ -740,7 +740,7 @@
                                 </div>
                                 <div class="testimonial__3__author">
                                     <div class="testimonial__3__img">
-                                        <img src="img/testimonial/testimonial__4.png" alt="">
+                                        <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                     </div>
                                     <div class="testimonial__3__name color__black">
                                         <h6><a href="#">Mattie Warner</a></h6>
@@ -757,7 +757,7 @@
                                 </div>
                                 <div class="testimonial__3__author">
                                     <div class="testimonial__3__img">
-                                        <img src="img/testimonial/testimonial__5.png" alt="">
+                                        <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                     </div>
                                     <div class="testimonial__3__name color__black">
                                         <h6><a href="#">Kristin Gilbert</a></h6>
@@ -774,7 +774,7 @@
                                 </div>
                                 <div class="testimonial__3__author">
                                     <div class="testimonial__3__img">
-                                        <img src="img/testimonial/testimonial__6.png" alt="">
+                                        <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                     </div>
                                     <div class="testimonial__3__name color__black">
                                         <h6><a href="#">Arlene Miles</a></h6>
@@ -791,7 +791,7 @@
                                 </div>
                                 <div class="testimonial__3__author">
                                     <div class="testimonial__3__img">
-                                        <img src="img/testimonial/testimonial__4.png" alt="">
+                                        <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                     </div>
                                     <div class="testimonial__3__name color__black">
                                         <h6><a href="#">Mattie Warner</a></h6>
@@ -808,7 +808,7 @@
                                 </div>
                                 <div class="testimonial__3__author">
                                     <div class="testimonial__3__img">
-                                        <img src="img/testimonial/testimonial__5.png" alt="">
+                                        <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                     </div>
                                     <div class="testimonial__3__name color__black">
                                         <h6><a href="#">Mattie Warner</a></h6>
@@ -834,7 +834,7 @@
                                 <path d="M20.5 12H3.67" stroke="#fff" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
                         </div>
-                        <!-- <div class="swiper-pagination"></div> -->
+             
                     </div>
 
                 </div>
@@ -858,14 +858,14 @@
           
             <!-- footer start -->
         <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
-        style="background-image: url(img/footer/footer_1.png);">
+        style="background-image: url(assets/img/footer/footer_1.png);">
 
         <div class="bastun__brand__badge bastun__brand__badge__footer">
             <div class="bastun__brand__badge__inner position-relative">
                 <a href="index.html">
 
-                    <img class="bbb__animate" src="img/footer/brand__badge.png" alt="Footer badge">
-                    <img class="bbb__icon" src="img/footer/brand__badge__inner.png" alt="Footer icon badge">
+                    <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
+                    <img class="bbb__icon" src="assets/img/footer/brand__badge__inner.png" alt="Footer icon badge">
                 </a>
             </div>
         </div>
@@ -876,7 +876,7 @@
                     <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                         <div class="footer__widget footer__left">
                             <div class="footer__logo">
-                                <img src="img/logo/full-logo.svg" alt="">
+                                <img src="assets/img/logo/full-logo.svg" alt="">
                             </div>
                             <div class="footer__text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -1008,12 +1008,12 @@
 
 
     <!-- JS here -->
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/glightbox.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/swiper-bundle.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/glightbox.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <script>
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
